include_HEADERS = tc.h tclist.h tchash.h tcnet.h tctime.h tcconf.h \
		  tctree.h tcalloc.h tcprioq.h tcmath.h tcmempool.h \
		  tcbyteswap.h
nodist_include_HEADERS = tcstring.h tctypes.h tcdirent.h tcendian.h
EXTRA_DIST = byteswap.yes byteswap.no snprintf.no \
	     strsep.yes strsep.no endian.little endian.big

.SILENT:
